[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bd_scan_yocto"
version = "1.0.18"
authors = [
  { name="Matthew Brady", email="mbrad@synopsys.com" },
]
description = "Process a built Yocto project to create a Black Duck project version"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackduck>=1.1.0",
    "requests",
    "aiohttp",
]

[project.scripts]
bd-scan-yocto = "bd_scan_yocto:main.main"

[project.urls]
"Homepage" = "https://github.com/matthewb66/bd_scan_yocto"
"Bug Tracker" = "https://github.com/matthewb66/bd_scan_yocto/issues"
